[gd_scene load_steps=54 format=4 uid="uid://8n6fki16mjou"]

[ext_resource type="Script" uid="uid://bohix0qc05fvw" path="res://scripts/game.gd" id="1_03owx"]
[ext_resource type="Script" uid="uid://cnfxw346yj4px" path="res://scripts/level.gd" id="2_20pc6"]
[ext_resource type="Script" uid="uid://cytpe7mta0mh3" path="res://scripts/background_tilemap.gd" id="3_20pc6"]
[ext_resource type="PackedScene" uid="uid://cpa7ynkewjg0c" path="res://scene/enemy_character_1.tscn" id="3_fpfj3"]
[ext_resource type="Script" uid="uid://0twq1tgvxej6" path="res://scripts/player_character.gd" id="4_5vvyt"]
[ext_resource type="Texture2D" uid="uid://dpej88mbekbpj" path="res://assets/decent_tileset1.png" id="4_20pc6"]
[ext_resource type="PackedScene" uid="uid://biybxy57ig8rd" path="res://scene/enemy_character_2.tscn" id="4_sc1dx"]
[ext_resource type="Texture2D" uid="uid://e11mpqqrxp86" path="res://assets/Knight_A.png" id="5_c6i3y"]
[ext_resource type="PackedScene" uid="uid://dwuxubri6yjhy" path="res://scene/enemy_character_3.tscn" id="5_kjvhd"]
[ext_resource type="PackedScene" uid="uid://bjl8jwjes6y1n" path="res://scene/enemy_character_4.tscn" id="6_5tuhn"]
[ext_resource type="Script" uid="uid://bjgyiqulxmsun" path="res://scripts/platform_generator.gd" id="6_c2ibq"]
[ext_resource type="Script" uid="uid://d27q2f5vleaw4" path="res://scripts/ui.gd" id="7_j4qnp"]
[ext_resource type="Texture2D" uid="uid://072r7kge6fyu" path="res://assets/button_restart.png" id="8_fpfj3"]
[ext_resource type="Texture2D" uid="uid://brbyjuhxev8me" path="res://assets/hearts.png" id="9_sc1dx"]
[ext_resource type="Script" uid="uid://dwpkn2gsgacq6" path="res://scripts/deathzone.gd" id="10_5tuhn"]
[ext_resource type="PackedScene" uid="uid://blg15me3xu2po" path="res://scene/deathzone.tscn" id="11_2gh4u"]
[ext_resource type="Texture2D" uid="uid://bmtew3clc87o5" path="res://assets/light.png" id="12_sc1dx"]
[ext_resource type="Script" uid="uid://d3rvh2ngw53mc" path="res://scripts/ui_heart.gd" id="14_c2ibq"]
[ext_resource type="PackedScene" uid="uid://dsoj70qblpoid" path="res://scene/stalactite.tscn" id="14_kjvhd"]
[ext_resource type="PackedScene" uid="uid://df73fyk85khx4" path="res://scene/roof_wine.tscn" id="17_3b0ty"]
[ext_resource type="PackedScene" uid="uid://ni1fpwufx5c5" path="res://scene/stone.tscn" id="18_bg4s2"]
[ext_resource type="AudioStream" uid="uid://ccchyax824hmj" path="res://assets/RANDOM_LOOPED.ogg" id="21_devvj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1d40f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vvyt"]
texture = ExtResource("4_20pc6")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_1d40f"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_1d40f")
physics_layer_1/collision_layer = 2
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_5vvyt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkp8b"]
size = Vector2(20, 26)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1d40f"]
radius = 5.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_k8iq5"]
atlas = ExtResource("5_c6i3y")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn1xq"]
atlas = ExtResource("5_c6i3y")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_apbl2"]
atlas = ExtResource("5_c6i3y")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oej6"]
atlas = ExtResource("5_c6i3y")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcfud"]
atlas = ExtResource("5_c6i3y")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak7sg"]
atlas = ExtResource("5_c6i3y")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbf7d"]
atlas = ExtResource("5_c6i3y")
region = Rect2(288, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oskos"]
atlas = ExtResource("5_c6i3y")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdqd4"]
atlas = ExtResource("5_c6i3y")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_15p3v"]
atlas = ExtResource("5_c6i3y")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t10jq"]
atlas = ExtResource("5_c6i3y")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0omci"]
atlas = ExtResource("5_c6i3y")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_avo2u"]
atlas = ExtResource("5_c6i3y")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhf3l"]
atlas = ExtResource("5_c6i3y")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqsj7"]
atlas = ExtResource("5_c6i3y")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_thpva"]
atlas = ExtResource("5_c6i3y")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4vit"]
atlas = ExtResource("5_c6i3y")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ket2y"]
atlas = ExtResource("5_c6i3y")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7igx"]
atlas = ExtResource("5_c6i3y")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldi0f"]
atlas = ExtResource("5_c6i3y")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwpu5"]
atlas = ExtResource("5_c6i3y")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw2cs"]
atlas = ExtResource("5_c6i3y")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_didiq"]
atlas = ExtResource("5_c6i3y")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_k8iq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8iq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn1xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apbl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oej6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcfud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak7sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbf7d")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oskos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdqd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15p3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t10jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0omci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avo2u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhf3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqsj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thpva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4vit")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ket2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7igx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldi0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwpu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw2cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_didiq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Environment" id="Environment_0omci"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_0omci"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("platform_generator", "player_character", "level")]
script = ExtResource("1_03owx")
platform_generator = NodePath("LevelGenerator")
player_character = NodePath("PlayerCharacter")
level = NodePath("Level")

[node name="Level" type="Node2D" parent="." node_paths=PackedStringArray("player_character", "platform_generator", "level_root", "ui")]
script = ExtResource("2_20pc6")
player_character = NodePath("../PlayerCharacter")
platform_generator = NodePath("../LevelGenerator")
level_root = NodePath(".")
ui = NodePath("../UILayer")
red_step_per_level = 0.25
desaturate_step_per_level = 0.25
enemy_types = Array[PackedScene]([ExtResource("3_fpfj3"), ExtResource("4_sc1dx"), ExtResource("5_kjvhd"), ExtResource("6_5tuhn")])

[node name="TileMapLayerBg" type="TileMapLayer" parent="Level" node_paths=PackedStringArray("target_camera")]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAD//wIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_1d40f")
script = ExtResource("3_20pc6")
target_camera = NodePath("../../PlayerCharacter/Camera2D")
parallax_factor = Vector2(0.2, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="Level"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAD//wIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_1d40f")

[node name="DoorArea2D" type="Area2D" parent="Level"]

[node name="ExitDoorSprite" type="Sprite2D" parent="Level/DoorArea2D"]
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite2" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 16)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite3" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 32)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite4" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 48)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite5" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 64)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite6" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 80)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite7" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 96)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite8" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 112)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite9" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 128)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite10" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 144)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite11" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 160)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="ExitDoorSprite12" type="Sprite2D" parent="Level/DoorArea2D"]
position = Vector2(0, 176)
texture = ExtResource("4_20pc6")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="DoorCollisionShape2D" type="CollisionShape2D" parent="Level/DoorArea2D"]
shape = SubResource("RectangleShape2D_wkp8b")

[node name="DeathzoneBelow" type="Node2D" parent="Level" node_paths=PackedStringArray("player")]
position = Vector2(0, 415)
script = ExtResource("10_5tuhn")
player = NodePath("../../PlayerCharacter")
spikes_sprite = ExtResource("11_2gh4u")
row_length = 1000

[node name="PlayerCharacter" type="CharacterBody2D" parent="." node_paths=PackedStringArray("ui")]
script = ExtResource("4_5vvyt")
ui = NodePath("../UILayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacter"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_1d40f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerCharacter"]
position = Vector2(0, 7)
sprite_frames = SubResource("SpriteFrames_k8iq5")
animation = &"attack"

[node name="Camera2D" type="Camera2D" parent="PlayerCharacter"]
position = Vector2(0, 5)
zoom = Vector2(4, 4)

[node name="AttackTimer" type="Timer" parent="PlayerCharacter"]
one_shot = true

[node name="IFrameTimer" type="Timer" parent="PlayerCharacter"]

[node name="PointLight2D" type="PointLight2D" parent="PlayerCharacter"]
position = Vector2(0, 10)
texture = ExtResource("12_sc1dx")

[node name="LevelGenerator" type="Node2D" parent="." node_paths=PackedStringArray("door_area", "ground_tilemap", "background_tilemap")]
script = ExtResource("6_c2ibq")
door_area = NodePath("../Level/DoorArea2D")
ground_tilemap = NodePath("../Level/TileMapLayer")
background_tilemap = NodePath("../Level/TileMapLayerBg")
level_width = 125
gap_chance = 0.08
surface_tiles = Array[Vector2i]([Vector2i(1, 0), Vector2i(0, 1)])
soil_tiles = Array[Vector2i]([Vector2i(1, 1)])
rare_soil_tiles = Array[Vector2i]([Vector2i(2, 2)])
rare_soil_chance = 0.02
roof_tiles = Array[Vector2i]([Vector2i(0, 0)])
stalactite_scene = ExtResource("14_kjvhd")
hanging_vine_scene = ExtResource("17_3b0ty")
floor_stone_scene = ExtResource("18_bg4s2")
background_tiles = Array[Vector2i]([Vector2i(1, 1)])

[node name="UILayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("restart_button", "level_label", "heart0", "heart1", "heart2")]
script = ExtResource("7_j4qnp")
restart_button = NodePath("RestartButton")
level_label = NodePath("LevelLabel")
heart0 = NodePath("Lifebar/Heart0")
heart1 = NodePath("Lifebar/Heart1")
heart2 = NodePath("Lifebar/Heart2")

[node name="RestartButton" type="TextureButton" parent="UILayer"]
offset_left = 10.0
offset_top = 9.0
offset_right = 51.0
offset_bottom = 21.0
scale = Vector2(4, 4)
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("8_fpfj3")

[node name="Lifebar" type="Node2D" parent="UILayer"]

[node name="Heart0" type="Sprite2D" parent="UILayer/Lifebar"]
position = Vector2(83, 112)
scale = Vector2(4, 4)
texture = ExtResource("9_sc1dx")
hframes = 5
region_rect = Rect2(0, 0, 16, 16)
script = ExtResource("14_c2ibq")

[node name="Heart1" type="Sprite2D" parent="UILayer/Lifebar"]
position = Vector2(143, 112)
scale = Vector2(4, 4)
texture = ExtResource("9_sc1dx")
hframes = 5
region_rect = Rect2(0, 0, 16, 16)
script = ExtResource("14_c2ibq")

[node name="Heart2" type="Sprite2D" parent="UILayer/Lifebar"]
position = Vector2(203, 112)
scale = Vector2(4, 4)
texture = ExtResource("9_sc1dx")
hframes = 5
region_rect = Rect2(0, 0, 16, 16)
script = ExtResource("14_c2ibq")

[node name="LevelLabel" type="Label" parent="UILayer"]
offset_left = 267.0
offset_top = 7.0
offset_right = 307.0
offset_bottom = 30.0
text = "Level 1"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0omci")
camera_attributes = SubResource("CameraAttributesPractical_0omci")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_devvj")
volume_db = -15.012
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="Level/DoorArea2D" to="Level" method="_on_door_area_2d_body_entered"]
[connection signal="timeout" from="PlayerCharacter/AttackTimer" to="PlayerCharacter" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="PlayerCharacter/IFrameTimer" to="PlayerCharacter" method="_on_i_frame_timer_timeout"]
[connection signal="pressed" from="UILayer/RestartButton" to="." method="_on_restart_button_pressed"]
